objects/Vosf_Question_Response__c.object
<CustomObject>
    <fields>
        <fullName>Is_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Question__c</fullName>
        <formula>IF(ISBLANK(Question__r.Parent_Question__r.Parent_Question__c),
IF(ISBLANK(Question__r.Parent_Question__c),
IF(ISBLANK(Question__c), &apos;&apos;, CASESAFEID(Question__c) )

, CASESAFEID(Question__r.Parent_Question__c))
, CASESAFEID(Question__r.Parent_Question__r.Parent_Question__c))</formula>
        <label>Primary Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionAndColumn__c</fullName>
        <formula>CASESAFEID(Question__c) +  NULLVALUE( CASESAFEID(Question_Column__c) , &apos;&apos;)</formula>
        <label>QuestionAndColumn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Choice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Choice</label>
        <referenceTo>Vosf_Question_Choice__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Column__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Column</label>
        <referenceTo>Vosf_Question_Column__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_Comment__c</fullName>
        <description>This field is filled only for Rating Type Question if the criteria for comment box is satisfied</description>
        <label>Rating Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Number__c</fullName>
        <description>This field shows response for other than text type of questions as where clause does not support long text area type</description>
        <label>Response Number</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Text_Area__c</fullName>
        <description>This field shows response for other than text type of questions as where clause does not support long text area type</description>
        <label>Response Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Text__c</fullName>
        <label>Response Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Invitation__c</fullName>
        <label>Survey Invitation</label>
        <referenceTo>Vosf_Survey_Invitation__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Question Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Response__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Choice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Invitation__c</field>
            <operation>equals</operation>
            <value>a3tO9000000DS9lIAG</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>